added two new scripts

--- a/home/ar-mobile-game/index.html
+++ b/home/ar-mobile-game/index.html
@@ -8591,7 +8591,7 @@
                                                 class="elementor-widget-container"
                                               >
                                                 <iframe
-                                                  src="../../downloads/pitches/pitch1.pdf"
+                                                  src="../../downloads/Insane AI/Pitches/pitch1.pdf"
                                                   width="100%"
                                                   height="600px"
                                                   style="
@@ -8871,7 +8871,7 @@
                                                 class="elementor-widget-container"
                                               >
                                                 <iframe
-                                                  src="../../downloads/pitches/pitch2.pdf"
+                                                  src="../../downloads/Insane AI/Pitches/pitch2.pdf"
                                                   width="100%"
                                                   height="600px"
                                                   style="
@@ -9206,7 +9206,7 @@
                                                 class="elementor-widget-container"
                                               >
                                                 <iframe
-                                                  src="../../downloads/pitches/pitch3.pdf"
+                                                  src="../../downloads/Insane AI/Pitches/pitch3.pdf"
                                                   width="100%"
                                                   height="600px"
                                                   style="
@@ -9834,7 +9834,7 @@
                               >
                                 <iframe
                                   class="themes-1-pdf"
-                                  src="../../downloads/themes/Detailed Themes of the World of Amaravat.pdf"
+                                  src="../../downloads/Insane AI/Themes/Detailed Themes of the World of Amaravat.pdf"
                                   allowfullscreen
                                 >
                                 </iframe>
@@ -10812,7 +10812,7 @@
                                 <div class="elementor-button-wrapper">
                                   <a
                                     class="elementor-button elementor-button-link elementor-size-sm"
-                                    href="../../downloads/Insane AI/Gameplay Brainstorm – Sample Level.pdf"
+                                    href="../../downloads/Insane AI/Gameplay/Gameplay Brainstorm – Sample Level.pdf"
                                     target="_blank"
                                   >
                                     <span
@@ -11483,7 +11483,7 @@
                                     >
                                       <iframe
                                         class="character-1-pdf"
-                                        src="../../downloads/characters/surveyor.pdf"
+                                        src="../../downloads/Insane AI/Character Bios/surveyor.pdf"
                                         allowfullscreen
                                       >
                                       </iframe>
@@ -11758,7 +11758,7 @@
                                     >
                                       <iframe
                                         class="character-2-pdf"
-                                        src="../../downloads/characters/SAI0525.pdf"
+                                        src="../../downloads/Insane AI/Character Bios/SAI0525.pdf"
                                         allowfullscreen
                                       >
                                       </iframe>
@@ -12195,7 +12195,7 @@
                         >
                           <div class="elementor-widget-container">
                             <iframe
-                              src="../../downloads/writing/barks.pdf"
+                              src="../../downloads/Insane AI/Writing/barks.pdf"
                               width="100%"
                               height="600px"
                               style="border: none; background-color: #121212"
@@ -12203,7 +12203,7 @@
                             </iframe>
                                                         <br>
                             <p style="text-align: center;"><i>
-                              <a href="../../downloads/writing/barks.pdf"target="_blank"><span style="color: #ffffff"
+                              <a href="../../downloads/Insane AI/Writing/barks.pdf"target="_blank"><span style="color: #ffffff"
                                           >(click to open in a new tab)</span></a></i>
                             </p>
                           </div>
@@ -12289,7 +12289,7 @@
                         >
                           <div class="elementor-widget-container">
                             <iframe
-                              src="../../downloads/Insane AI/writing/Zen.pdf"
+                              src="../../downloads/Insane AI/Writing/zen_script_excerpt.pdf"
                               width="100%"
                               height="600px"
                               style="border: none; background-color: #121212"
@@ -12297,7 +12297,7 @@
                             </iframe>
                                                                                     <br>
                             <p style="text-align: center;"><i>
-                              <a href="../../downloads/Insane AI/writing/Zen.pdf" target="_blank"><span style="color: #ffffff"
+                              <a href="../../downloads/Insane AI/writing/zen_script_excerpt.pdf" target="_blank"><span style="color: #ffffff"
                                           >(click to open in a new tab)</span></a></i>
                             </p>
                           </div>
@@ -12776,7 +12776,7 @@
                         >
                           <div class="elementor-widget-container">
                             <iframe
-                              src="../../downloads/RamendraXP.pdf"
+                              src="../../downloads/Testimonials/RamendraXP.pdf"
                               width="100%"
                               height="600px"
                               style="border: none; background-color: #121212"
