--- a/home/the-guernica-engine/index.html
+++ b/home/the-guernica-engine/index.html
@@ -9327,7 +9327,7 @@
                               <div class="elementor-button-wrapper">
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
-                                  href="../../demo/TheGuernicaEngineDemo.html"
+                                  href="../../downloads/The Guernica Engine/Twine Demo/TheGuernicaEngineDemo.html"
                                 >
                                   <span
                                     class="elementor-button-content-wrapper"
