--- a/writing-samples/index.html
+++ b/writing-samples/index.html
@@ -220,7 +220,11 @@ flexibility(document.documentElement);
 				</div>
 				<div class="elementor-element elementor-element-33e4f01 elementor-widget elementor-widget-heading" data-id="33e4f01" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Samples</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Writing Samples</h2>	
+		<p style="text-align: center;"><i>
+                              <span style="color: #ffffff"
+                                          >Click tab to toggle (active/inactive)<span></i>
+                            </p>	</div>
 				</div>
 					</div>
 				</div>
@@ -235,7 +239,9 @@ flexibility(document.documentElement);
 															<span class="elementor-toggle-icon-closed"><svg class="e-font-icon-svg e-fas-plus-square" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg></span>
 								<span class="elementor-toggle-icon-opened"><svg class="elementor-toggle-icon-opened e-font-icon-svg e-fas-minus-square" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"></path></svg></span>
 													</span>
-												<a class="elementor-toggle-title" tabindex="0">Prose</a>
+												<a class="elementor-toggle-title" tabindex="0">Prose Samples</a>
+
+
 					</div>
 
 					<div id="elementor-tab-content-2271" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-2271"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="https://drive.google.com/file/d/1j4ICIByoB6CyT45p01JwXLcestd8vKh5/view?usp=share_link" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4><br><a href="https://drive.google.com/file/d/14K2KZqs_SfsXSGp5IIX59FEFthkKCyLT/view?usp=share_link" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
@@ -246,35 +252,44 @@ flexibility(document.documentElement);
 															<span class="elementor-toggle-icon-closed"><svg class="e-font-icon-svg e-fas-plus-square" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg></span>
 								<span class="elementor-toggle-icon-opened"><svg class="elementor-toggle-icon-opened e-font-icon-svg e-fas-minus-square" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"></path></svg></span>
 													</span>
-												<a class="elementor-toggle-title" tabindex="0">Scripts</a>
+												<a class="elementor-toggle-title" tabindex="0">Scripts Samples</a>
 					</div>
 
 					<div id="elementor-tab-content-2272" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-2272">
-						<h4>
-							<a href="https://drive.google.com/file/d/1hQyuAtJJPfJ_7Npqd0DPUPshaMQx-EkC/view?usp=sharing" target="_blank" rel="noopener">
+										<br><h4>
+							<a href="../downloads/Writing Samples/Script/raumschokolade_sample_script.pdf" target="_blank" rel="noopener">
 								<span style="text-decoration: underline;">
-									<span style="color: #00ffff; text-decoration: underline;">Mettle</span>
+									<span style="color: #00ffff; text-decoration: underline;">Raumschokolade</span>
 								</span>
 							</a>
 						</h4>
-						<p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash; </b>A scene about a tense political situation between leaders of a city.</p>
+						<p><b>Genre &ndash; </b>Slice of Life, Sci-Fi<br><b>Description &ndash; </b>A tender, bittersweet drama about two friends sharing chocolate, memories, and fears of the future.</p>
+						<br>
+						<h4>
+							<a href="../downloads/Writing Samples/Script/damoclesrain_sample_script.pdf" target="_blank" rel="noopener">
+								<span style="text-decoration: underline;">
+									<span style="color: #00ffff; text-decoration: underline;">Damocles Rain</span>
+								</span>
+							</a>
+						</h4>
+						<p><b>Genre &ndash; </b>Political Drama, Intrigue<br><b>Description &ndash; </b>A tense, cold-blooded political drama following a wary government director and his subordinate as they try to make sense of an incident as they race to take control of the narrative.</p>
 						<br>
 						<h4>
 							<span style="text-decoration: underline; color: #00ffff;">
-								<a style="color: #00ffff; text-decoration: underline;" href="../downloads/Insane AI/writing/Zen.pdf" target="_blank" rel="noopener">Zen</a>
+								<a style="color: #00ffff; text-decoration: underline;" href="../downloads/Insane AI/writing/zen_script_excerpt.pdf" target="_blank" rel="noopener">Zen</a>
 							</span>
 						</h4>
-						<p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash;&nbsp;</b>This two-part cutscene, establishes character dynamics between the emotionally strained Surveyor and SAI 0525.</p>
+						<p><b>Genre &ndash; </b>Mystery, fantasy<br><b>Description &ndash;&nbsp;</b>This two-part cutscene, establishes character dynamics between the emotionally strained Surveyor and SAI 0525.</p>
 						<p><strong>Project</strong> &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></p>
 						<h4>
-							<br
-							<a href="https://drive.google.com/file/d/1zRVD3-0Agf1fuMtxGMOFGaZfEQuwcRA7/view?usp=sharing" target="_blank" rel="noopener">
+							<br>
+							<!-- <a href="https://drive.google.com/file/d/1zRVD3-0Agf1fuMtxGMOFGaZfEQuwcRA7/view?usp=sharing" target="_blank" rel="noopener">
 								<span style="text-decoration: underline;">
 									<span style="color: #00ffff; text-decoration: underline;">DIS-K promo pilot script</span>
 								</span>
 							</a>
 						</h4>
-						<p><b>Genre &ndash; </b>Comedy, Satire, Scifi<br><b>Description &ndash; </b>A parody promo video about a robot from defense company that is ambiguously vague.</p>
+						<p><b>Genre &ndash; </b>Comedy, Satire, Scifi<br><b>Description &ndash; </b>A parody promo video about a robot from defense company that is ambiguously vague.</p> -->
 					</div>
 				</div>
 								</div>
@@ -294,9 +309,9 @@ flexibility(document.documentElement);
 
 					<div id="elementor-tab-content-1981" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-1981">
 						<h4>
-							<a href="../downloads/writing/barks.pdf" target="_blank" rel="noopener">
+							<a href="../downloads/Insane AI/Writing/barks.pdf" target="_blank" rel="noopener">
 								<span style="text-decoration: underline;">
-									<strong><span style="color: #00ffff; text-decoration: underline;">SAI Workout Barks</span></strong>
+									<span style="color: #00ffff; text-decoration: underline;">SAI Workout Barks</span>
 								</span>
 							</a>
 						</h4>
@@ -314,7 +329,7 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Character Bios</a>
 					</div>
 
-					<div id="elementor-tab-content-1982" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1982"><h4><a href="../downloads/characters/SAI0525.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff;"><strong>SAI 0525</strong></span></span></a></h4><p><b>Personality &ndash; </b>proud, confident, and stubbornly committed to its Arogyat ideology, yet insecure and defensive.<br><b>Description &ndash;&nbsp;</b> A decommissioned companion intelligence fighting to restore a system that oppresses him.</p><p><strong>Project &ndash; <a href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener"><span style="color: #00ffff;">Interactive Fitness Game</span></a><br></strong></p><h4><br><a href="../downloads/characters/surveyor.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline; color: #00ffff;"><strong>The Surveyor</strong></span></a></h4><p><b>Genre &ndash; </b>a melancholic, manipulative, and paranoid soul with a stubborn streak. Though still curious and empathetic towards other.<br><b>Description &ndash; </b>A person haunted by the death of their closest friend and the guilt of surviving, they spiral into addiction and despair.</p><p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></strong></p></div>
+					<div id="elementor-tab-content-1982" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1982"><h4><a href="../downloads/Insane AI/Character Bios/SAI0525.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff;">SAI 0525</span></span></a></h4><p><b>Personality &ndash; </b>proud, confident, and stubbornly committed to its Arogyat ideology, yet insecure and defensive.<br><b>Description &ndash;&nbsp;</b> A decommissioned companion intelligence fighting to restore a system that oppresses him.</p><p><strong>Project &ndash; <a href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener"><span style="color: #00ffff;">Interactive Fitness Game</span></a><br></strong></p><h4><br><a href="../downloads/Insane AI/Character Bios/surveyor.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline; color: #00ffff;">The Surveyor</span></a></h4><p><b>Genre &ndash; </b>a melancholic, manipulative, and paranoid soul with a stubborn streak. Though still curious and empathetic towards other.<br><b>Description &ndash; </b>A person haunted by the death of their closest friend and the guilt of surviving, they spiral into addiction and despair.</p><p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></strong></p></div>
 				</div>
 								</div>
 				</div>
@@ -345,10 +360,10 @@ flexibility(document.documentElement);
 															<span class="elementor-toggle-icon-closed"><svg class="e-font-icon-svg e-fas-plus-square" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg></span>
 								<span class="elementor-toggle-icon-opened"><svg class="elementor-toggle-icon-opened e-font-icon-svg e-fas-minus-square" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"></path></svg></span>
 													</span>
-												<a class="elementor-toggle-title" tabindex="0">Scripts</a>
+												<a class="elementor-toggle-title" tabindex="0">Script Samples</a>
 					</div>
 
-					<div id="elementor-tab-content-1462" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1462"><h4><a href="https://drive.google.com/file/d/1hQyuAtJJPfJ_7Npqd0DPUPshaMQx-EkC/view?usp=sharing"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">Mettle</span></span></a></h4><p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash; </b>A scene about a tense political situation between leaders of a city.</p><p>&nbsp;</p><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff; text-decoration: underline;" href="../downloads/Insane AI/writing/Zen.pdf" target="_blank" rel="noopener">Zen</a></span></h4><p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash;&nbsp;</b>This two-part cutscene, establishes character dynamics between the emotionally strained Surveyor and SAI 0525.</p><p><strong>Project</strong> &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></p><p>&nbsp;</p><h4><a href="https://drive.google.com/file/d/1zRVD3-0Agf1fuMtxGMOFGaZfEQuwcRA7/view?usp=sharing"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">DIS-K promo pilot script</span></span></a></h4><p><b>Genre &ndash; </b>Comedy, Satire, Scifi<br><b>Description &ndash; </b>A parody promo video about a robot from defense company that is ambiguously vague.</p></div>
+					<div id="elementor-tab-content-1462" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1462"><h4><a href="../downloads/Writing Samples/Script/damoclesrain_sample_script.pdf"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">Damocles Rain</span></span></a></h4><p><b>Genre &ndash; </b>Politics, Intrigue<br><b>Description &ndash; </b>A tense, cold-blooded political drama following a wary government director and his subordinate as they try to make sense of an incident as they race to take control of the narrative.</p><p>&nbsp;</p><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff; text-decoration: underline;" href="../downloads/Insane AI/writing/zen_script_excerpt.pdf" target="_blank" rel="noopener">Zen</a></span></h4><p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash;&nbsp;</b>This two-part cutscene, establishes character dynamics between the emotionally strained Surveyor and SAI 0525.</p><p><strong>Project</strong> &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></p><p>&nbsp;</p><h4><a href="https://drive.google.com/file/d/1zRVD3-0Agf1fuMtxGMOFGaZfEQuwcRA7/view?usp=sharing"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">DIS-K promo pilot script</span></span></a></h4><p><b>Genre &ndash; </b>Comedy, Satire, Scifi<br><b>Description &ndash; </b>A parody promo video about a robot from defense company that is ambiguously vague.</p></div>
 				</div>
 							<div class="elementor-toggle-item">
 					<div id="elementor-tab-title-1463" class="elementor-tab-title" data-tab="3" role="button" aria-controls="elementor-tab-content-1463" aria-expanded="false">
@@ -409,7 +424,7 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Character Bios</a>
 					</div>
 
-					<div id="elementor-tab-content-1622" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1622"><h4><a href="../downloads/characters/surveyor.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff;"><strong>SAI 0525</strong></span></span></a></h4><p><b>Personality &ndash; </b>proud, confident, and stubbornly committed to its Arogyat ideology, yet insecure and defensive.<br><b>Description &ndash;&nbsp;</b> A decommissioned companion intelligence fighting to restore a system that oppresses him.</p><p><strong>Project &ndash; <a href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener"><span style="color: #00ffff;">Interactive Fitness Game</span></a><br></strong></p><h4><a href="../downloads/characters/SAI0525.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline; color: #00ffff;"><strong>THE SURVEYOR</strong></span></a></h4><p><b>Genre &ndash; </b>a melancholic, manipulative, and paranoid soul with a stubborn streak. Though still curious and empathetic towards other.<br><b>Description &ndash; </b>A person haunted by the death of their closest friend and the guilt of surviving, they spiral into addiction and despair.</p><p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></strong></p></div>
+					<div id="elementor-tab-content-1622" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1622"><h4><a href="../downloads/Insane AI/Character Bios/surveyor.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff;"><strong>SAI 0525</strong></span></span></a></h4><p><b>Personality &ndash; </b>proud, confident, and stubbornly committed to its Arogyat ideology, yet insecure and defensive.<br><b>Description &ndash;&nbsp;</b> A decommissioned companion intelligence fighting to restore a system that oppresses him.</p><p><strong>Project &ndash; <a href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener"><span style="color: #00ffff;">Interactive Fitness Game</span></a><br></strong></p><h4><a href="../downloads/Insane AI/Character Bios/SAI0525.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline; color: #00ffff;"><strong>THE SURVEYOR</strong></span></a></h4><p><b>Genre &ndash; </b>a melancholic, manipulative, and paranoid soul with a stubborn streak. Though still curious and empathetic towards other.<br><b>Description &ndash; </b>A person haunted by the death of their closest friend and the guilt of surviving, they spiral into addiction and despair.</p><p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></strong></p></div>
 				</div>
 							<div class="elementor-toggle-item">
 					<div id="elementor-tab-title-1623" class="elementor-tab-title" data-tab="3" role="button" aria-controls="elementor-tab-content-1623" aria-expanded="false">
